--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <link href="pokemons.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 
   </head>
   <body>
-    <h1>Austin's PC (Not Bill's)</h1>
+    <h1>AUSTIN'S PC (NOT TO BE CONFUSED WITH BILL'S)</h1>
 
     <div class="wrapper">
       <div class="controls">
         <!--Search Form-->
         <form>
           <p>
-            <label for="search">Enter a SINGLE search term (required): </label>
+            <label for="search">Enter Pokemon Name or Number (required): </label>
             <input type="text" id="search" class="search" required>
           </p>
           <p>
-            <button class="submit">Submit search</button>
+            <button class="submit">Search</button>
           </p>
         </form>
       </div>
